* Release 0.1.5
	* Getting CPU info from dmesg fails on Linux but not BSD
	* Subprocess stderr is sometimes printed to console
	* Make it work on a BeagleBone
	* Stepping parse TypeError on ARM

02/11/2015 Release 0.1.4
	* New release to get around the brokenness of pypi

02/11/2015 Release 0.1.3
	* Fixed issue with supporting cpu strings that do not have @ in them.
	* Fixed issue with supporting cpu strings that do not have Hz in them.

09/30/2014 Release 0.1.2
	* Added support for installing to binary path.
	* Fixed issue with crashing in python 3.

09/23/2014 Release 0.1.1
	* Fixed Bug #3: It is not obvious if Hz Raw is the current Hz, or the advertised Hz
	* Fixed Bug #2: Wrong CPU frequency in get_cpu_info_from_proc_cpuinfo()